# jdiff

./: .bandit.yml  .cookiecutter.json  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  example.invoke.yml  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py  towncrier_template.j2  towncrier_templates.j2
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
changes/: +add-cookie-template.housekeeping  +dne.documentation  +drift-manage-011326.housekeeping  130.added  133.fixed  134.added  140.fixed  141.fixed  141.housekeeping  144.fixed  149.added
cu_allspice_lb_management/: __init__.py
cu_allspice_lb_management/api/: __init__.py
cu_allspice_lb_management/tests/: __init__.py  test_api.py  test_basic.py
development/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  nautobot_config.py
docs/: architecture.md  generate_code_reference_pages.py  index.md  usage.md
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_0.0.md  version_1.0.md
docs/code-reference/jdiff/: __init__.md  check_types.md  evaluators.md  extract_data.md  operator.md
docs/dev/: contributing.md  dev_environment.md  release_checklist.md
docs/dev/code_reference/: api.md  package.md
docs/user/: architecture.md  lib_getting_started.md  lib_overview.md  lib_use_cases.md  usage.md
jdiff/: __init__.py  check_types.py  cli.py  evaluators.py  extract_data.py  log.py  operator.py
jdiff/utils/: __init__.py  data_normalization.py  diff_helpers.py  jmespath_parsers.py
lb_models/: __init__.py  choices.py  filters.py  models.py  navigation.py  tables.py  urls.py
lb_models/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
lb_models/forms/: certificate.py  certificates.py  customer.py  customerappprofile.py  healthmonitor.py  monitor.py  pool.py  poolmember.py  poolmembers.py  server.py  serverservicegroupbinding.py  servicegroup.py  servicegroupbinding.py  servicegroupmemberbinding.py  servicegroupmonitorbinding.py  sslcertkey.py  sslserverbinding.py  utils.py  vip.py  vserver.py
lb_models/migrations/: 0001_initial.py  0002_alter_healthmonitor_lrtm.py  0002_alter_vip_vip_args.py  0002_alter_vipcertificate_version_number.py  0002_auto_20230213_1440.py  0002_auto_20230214_1445.py  0002_auto_20230322_0931.py  0002_auto_20230324_1329.py  0002_auto_20230508_1331.py  0002_rename_healthmonitor_monitor.py  0002_vippoolresponse.py  0002_vserver_td.py  0003_alter_monitor_args.py  0003_alter_servicegroupmemberbinding_server_port.py  0003_alter_viphealthmonitor_url.py  0003_alter_vippoolmember_member_args.py  0003_alter_vippoolmember_port.py  0003_auto_20230320_1440.py  0003_auto_20230501_0809.py  0003_viphealthmonitor_vippoolmember.py  0004_auto_20230608_0926.py  0004_vippool.py  0005_auto_20230206_0851.py  0005_auto_20230612_0911.py
lb_models/templates/lb_models/: certificate.html  customer.html  healthmonitor.html  servicegroup.html  servicegroupbinding.html  vip.html  vipcertificate.html  viphealthmonitor.html  vippool.html  vippoolmember.html  vserver.html
lb_models/tests/: __init__.py  test_api.py  test_basic.py
lb_models/views/: certificate.py  certificates.py  customer.py  customerappprofile.py  healthmonitor.py  monitor.py  pool.py  poolmember.py  poolmembers.py  server.py  serverservicegroupbinding.py  servicegroup.py  servicegroupbinding.py  servicegroupmemberbinding.py  servicegroupmonitorbinding.py  sslcertkey.py  sslserverbinding.py  vip.py  vserver.py
netcompare/: __init__.py  arguments.py  check_type.py  check_types.py  evaluator.py  evaluators.py  exceptions.py  operator.py  runner.py
netcompare/utils/: data_normalization.py  diff_helpers.py  filter_parsers.py  flatten.py  jmespath_parsers.py  jmspath_parsers.py  refkey.py  refkey_utils.py
netcompare/utils/data/: parsers.py
netcompare/utils/jmspath/: parsers.py
netcompare/utils/list/: flatten.py
netcompare/utils/refkey/: utils.py
tests/: test_bugs.py  test_data_normalization.py  test_diff_generator.py  test_diff_helpers.py  test_filter_parsers.py  test_flatten.py  test_get_value.py  test_issues.py  test_jmespath_parsers.py  test_jmspath_parsers.py  test_operators.py  test_refkey.py  test_sw_upgrade_device_state.py  test_type_check.py  test_type_checks.py  test_validates.py  utility.py
tests/mock/api/: post.json  pre.json  results.json  trusted_domains.json
tests/mock/exact_match_nested/: post.json  pre.json
tests/mock/napalm_get_bgp_neighbors/: multi_vrf.json  results.json
tests/mock/napalm_get_interfaces/: post.json  pre.json
tests/mock/napalm_get_lldp_neighbors/: post.json  pre.json
tests/mock/napalm_getter_additional_peer/: post.json  pre.json
tests/mock/napalm_getter_missing_peer/: post.json  results.json
tests/mock/parameter_match/: napalm_facts.json  pre.json
tests/mock/post/: napalm_get_bgp_neighbors.json  napalm_getter_changed_peer.json
tests/mock/pre/: napalm_get_bgp_neighbors.json
tests/mock/raw_novalue_exclude/: pre.json
tests/mock/raw_novalue_noexclude/: post.json  results.json
tests/mock/raw_value_exclude/: pre.json
tests/mock/results/: exact_match_nested.json  napalm_get_lldp_neighbors.json  napalm_getter.json  raw_value_exclude.json  (+3 more)
tests/unit/: test_basics.py  test_cli.py  test_logging.py
(+64 files in other folders)
