[tool.poetry]
name = "jdiff"
version = "0.0.6"
description = "A light-weight library to compare structured output from network devices show commands."
authors = ["Network to Code, LLC <info@networktocode.com>"]
license = "Apache-2.0"
homepage = "https://github.com/networktocode/jdiff"
repository = "https://github.com/networktocode/jdiff"
readme = "README.md"
keywords = ["json", "diff", "network"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = [
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
deepdiff = ">=5.5.0 <7.0"
jmespath = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
requests_mock = "*"
pyyaml = "*"
black = "*"
pylint = "*"
pydocstyle = "*"
yamllint = "*"
bandit = "*"
invoke = "*"
toml = "*"
flake8 = "*"
mypy = "*"
mkdocs = "^1.3.1"
mkdocs-include-markdown-plugin = "^3.6.1"
importlib-metadata = "<5.0.0"  # https://importlib-metadata.readthedocs.io/en/latest/history.html#v5-0-0

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
# too-many-branches disabled to supported nested logic in Operator.
# protected-access disabled as we want test the method
disable = """,
    line-too-long,
    too-many-branches,
    protected-access
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "(?!tests|migrations|development)[^\\.].*"
# D212 is enabled by default in google convention, and complains if we have a docstring like:
# """
# My docstring is on the line after the opening quotes instead of on the same line as them.
# """
# We've discussed and concluded that we consider this to be a valid style choice.
add_ignore = "D212"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = "-vv --doctest-modules"

[tool.mypy]
exclude = [
    '^tasks\.py',
]

[[tool.mypy.overrides]]
module = [
    "deepdiff",
    "jmespath",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
